--- a/src/css/partials/_modules.scss
+++ b/src/css/partials/_modules.scss
@@ -6,3 +6,22 @@
 
 @import "gallery";
 @import "resume";
+@import "resume_education";
+@import "resume_skills";
+
+.page-article {
+  margin-top: 2em;
+}
+
+.aside-image {
+
+  & .image {
+    width: 100%;
+    height: 100vh;
+    display: block;
+    position: absolute;
+    top: 0;
+    background-size: cover;
+    background-position: center center;
+  }
+}
