--- a/src/css/partials/_navigation.scss
+++ b/src/css/partials/_navigation.scss
@@ -31,11 +31,11 @@
         &::after {
           content: "";
           position: absolute;
-          width: 120%;
-          height: 40%;
+          width: 100%;
+          height: 10%;
           bottom: 0;
-          left: 10%;
-          background: $color2;
+          left: 0;
+          background: $color5;
           z-index: -1;
         }
       }
