--- a/src/css/partials/_type.scss
+++ b/src/css/partials/_type.scss
@@ -26,7 +26,11 @@
   }
 
   &-secondary {
+    font: normal 0.875em/1.28em $font-body;
 
+    &.mod-footer {
+      color: #999999;
+    }
   }
 
 }
