--- a/src/css/main.css
+++ b/src/css/main.css
@@ -752,6 +752,46 @@ p {
           background: #92b4a7;
           z-index: -1; }
 
+.contact-block {
+    margin-top: 5em;
+    display: block;
+}
+
+.block-link {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    line-height: 2;
+    color: #2f2f2f;
+}
+
+.block-link:hover, .block-link :focus {
+    color: #92b4a7;
+}
+
+.visible-sm {
+    display: none;
+}
+
+@media only screen and (max-width: 767px) {
+    .visible-sm {
+        display: block;
+    }
+
+    .logo {
+        height: 60px;
+    }
+
+    .nav-item {
+        display: inline-block;
+        width: 33.33%;
+    }
+
+    .contact-block {
+        display: none !important;
+    }
+}
+
 html {
   background: white;
   color: #2f2f2f;
@@ -861,6 +901,14 @@ body {
     background: #92b4a7;
     color: white; }
 
+@media only screen and (max-width: 767px) {
+    .btn {
+        margin-right: 0;
+        display: block;
+        width: 100%;
+    }
+}
+
 /**
  * Work History Items
  *
@@ -891,14 +939,23 @@ body {
 .card {
   position: relative;
   list-style-type: none;
+    color: #2f2f2f;
   padding: 0;
   border: 1px solid #CCCCCC;
   margin-bottom: 40px;
   display: block;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.3);
-  transition: all 0.2s ease; }
+    transition: all 0.2s ease;
+    text-decoration: none;
+}
   .card:hover {
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2); }
+
+.card-image {
+    background-size: cover;
+    background-position: center center;
+    padding-top: 56.25%;
+}
   .card-footer {
     padding: 0.5em 1em; }
     .card-footer .skills .skill-icon {
@@ -960,6 +1017,13 @@ body {
       position: absolute;
       left: 0;
       background: #92b4a7; }
+
+@media only screen and (max-width: 767px) {
+    .experience-body {
+        padding-left: 2em;
+        margin-top: 2em;
+    }
+}
 
 /**
  * Education Section
@@ -1030,6 +1094,20 @@ body {
   border-top: 1px dashed #bdc4a7;
   text-align: center; }
 
+.hidden-sm {
+    display: block !important;
+}
+
+@media only screen and (max-width: 767px) {
+    .cta-block {
+        padding: 5em 0;
+    }
+
+    .hidden-sm {
+        display: none;
+    }
+}
+
 .page-article {
   margin-top: 2em; }
 
@@ -1037,7 +1115,8 @@ body {
   width: 100%;
   height: 100vh;
   display: block;
-  position: absolute;
+    position: fixed;
   top: 0;
+    z-index: 1;
   background-size: cover;
   background-position: center center; }
