--- a/src/css/partials/_inputs.scss
+++ b/src/css/partials/_inputs.scss
@@ -19,3 +19,11 @@
     color: $color0;
   }
 }
+
+@media only screen and (max-width: 767px) {
+  .btn {
+    margin-right: 0;
+    display: block;
+    width: 100%;
+  }
+}
