--- a/src/css/partials/_modules.scss
+++ b/src/css/partials/_modules.scss
@@ -20,8 +20,9 @@
     width: 100%;
     height: 100vh;
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
+    z-index: 1;
     background-size: cover;
     background-position: center center;
   }
