--- a/src/css/partials/_resume.scss
+++ b/src/css/partials/_resume.scss
@@ -73,3 +73,10 @@
   }
 
 }
+
+@media only screen and (max-width: 767px) {
+  .experience-body {
+    padding-left: 2em;
+    margin-top: 2em;
+  }
+}
