--- a/src/css/partials/_gallery.scss
+++ b/src/css/partials/_gallery.scss
@@ -47,14 +47,20 @@
   &-image  {
     background-size: cover;
     background-position: center center;
-    padding-top: 56.25% // 16:9 Aspect Ratio
+    //padding-top: 56.25% // 16:9 Aspect Ratio
+    padding-top: 80%;
   }
 
   &-footer {
     padding: 0.5em 1em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: $color0;
 
     & .skills .skill-icon {
-      width: 2em;
+      width: 1.5em;
+      margin-right: 10px;
     }
   }
 }
